--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.108.0">
+    <link rel="shortcut icon" type="image/png" href="img/logo.png">
     <title>DreamHouseLand</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
@@ -45,10 +46,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Join Us</a>
+            <a class="nav-link" href="#broker">Join Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">About Us</a>
+            <a class="nav-link " href="#about">About Us</a>
           </li>
         </ul>
  
@@ -56,13 +57,13 @@
     </div>
   </nav>
   
-    <a href="tel:+919813018436" style=" height: 95px; width: 95px; background-color: white; z-index: 99; padding-left: 18px;  border-radius: 50%; margin-left: 90%; margin-top:35%; position: fixed; text-decoration: none; color: #1c1c1c; font-size: 60px; "><i class="ri-phone-fill"></i></a>
+    <a href="tel:+919813018436" id = "call"><i class="ri-phone-fill"></i></a>
   
 </header>
 
 
-
-<main>
+<!-- 
+<main>       Containerrrrr--> 
 
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -127,7 +128,9 @@
 
   
 
-  <div class="container marketing">
+  <div class="container marketing">       
+
+    <!-- <div class="container marketing"></div>                Containerr remove  -->
 
     <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
         <h1 class="mb-3">Property Agents</h1>
@@ -157,9 +160,9 @@
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+    <hr class=" featurette-divider">
 
-    <div class="row featurette">
+    <div class=" row featurette" id="about">
       <div class="col-md-7">
         <h1 class="featurette-heading fw-normal lh-1"><span style="font-size: 120px;"> 3708 Sales</span> <span class="text-muted">It’ll blow your mind.</span></h1>
         <p  class="lead">We'll find You The Best Deal</p>
@@ -204,7 +207,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2022–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 </main>
 
