--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,9 +221,32 @@ z-index: 10;
     }
     #broker{
         height: 950px;
+        margin-top: 5rem;
     }
     .carousel-inner{
     width: 100%;
    }
 
 }
+
+#call{
+    background-color: white;
+     z-index: 99;
+      padding-left: 18px;  
+      border-radius: 50%; 
+      /* margin-left: 90%;
+       margin-top:35%; */
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+         text-decoration: none; 
+         color: #1c1c1c;
+        font-size: 50px;
+        height: 80px;
+        width: 85px;
+}
+
+form{
+    display: flex;  align-items: center; justify-content: center;
+}
+
