--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     
     <title>Document</title>
+    
 
 </head>
 <body>
@@ -23,8 +24,8 @@
     
 <div class="row">
     <div class="box col-lg-12">
-        <span class="borderLine"></span>
-        <form action="/client" method="post">
+    <span class="borderLine"></span>
+        <form action="/" method="POST"  style="">
             <h2>Are You A Client ?</h2>
         <div class="inputBox">
             <input name="clientName" type="text" required="required">
@@ -44,8 +45,15 @@
                 <i></i>
                 </div>
                 <div class="inputBox">
-                    <input name="location" type="text" required="required">
-                    <span>Location Where Do You Want?</span>
+                    <select name="location" type="text" required="required">
+                        <span>Where Do You Want?</span>
+                        <option selected disabled  value="House">Where Do You Want?</option>
+                        <option value="Kurukshetra">Kurukshetra</option>
+                        <option value="Chandigarh">Chandigarh</option>
+                        <option value="Karnal">Karnal</option>
+                        <option value="Ambala">Ambala</option>
+                        <option value="Yamuna Nagar">Yamuna Nagar</option>
+                    </select>
                     <i></i>
                     </div>
                     <!-- <div class="inputBox">
@@ -65,12 +73,12 @@
                         <i></i>
                         </div>
                         <div class="inputBox">
-                            <input name="email" type="email" required="required">
+                            <input name="email" type="email" required="required" style="width:100%">
                             <span>Your Email</span>
                             <i></i>
                             </div>  
        
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit"  >
         </form>
     </div>
 
@@ -78,7 +86,7 @@
 
     <div class="box col-lg-12" id="broker">
         <span class="borderLine"></span>
-        <form action="/agent" method="post">
+        <form action="/client" method="post">
             <h2>Are You A Broker ? <span style="font-size: 12px;">~ Be Our Partners</span></h2>
             
             <div class="inputBox">
@@ -118,7 +126,7 @@
                             <i></i>
                             </div>  
        
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" >
         </form>
     </div>
 </div>
