--- a/views/crm.ejs
+++ b/views/crm.ejs
@@ -52,6 +52,8 @@
         <div class="card-body d-flex flex-row " style="justify-content: space-between;" >
             <h6 class="card-title"> Max-Budget : <%= record[i].budget %></h6>
             <p class="card-text text-danger"> <i class="ri-map-pin-line" style=""></i> <%= record[i].location %></p>
+            <p class="card-text text-danger"> <i class="ri-map-pin-line" style=""></i> <%= record[i].particularLocation %></p>
+            <p class="card-text text-danger"> <i class="ri-map-pin-line" style=""></i> <%= record[i].currentLocation %></p>
             <p class="card-text " style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">  <%= record[i].phone %></p>
           
            
