--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,8 @@ border-radius: 3em;
 
 .box{
     position: relative;
-    width: 580px;
-    height: 800px;
+    width: 500px;
+    height: 1000px;
     background: #1c1c1c;
     border-radius: 8px;
     overflow: hidden;
@@ -53,10 +53,10 @@ border-radius: 3em;
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 580px;
-    height: 800px;
+    width: 500px;
+    height: 1000px;
     background: linear-gradient(0deg,transparent,
-    transparent,#45f3ff,#45f3ff,#45f3ff);
+    transparent,red,red,red);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -66,10 +66,10 @@ border-radius: 3em;
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 580px;
-    height: 800px;
+    width: 500px;
+    height: 1000px;
     background: linear-gradient(0deg,transparent,
-    transparent,#45f3ff,#45f3ff,#45f3ff);
+    transparent,red,red,red);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -86,10 +86,10 @@ border-radius: 3em;
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 580px;
-    height: 800px;
+    width: 500px;
+    height: 1000px;
     background: linear-gradient(0deg,transparent,
-    transparent,#ff2770,#ff2770,#ff2770);
+    transparent,#fff,#fff,#fff);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -100,10 +100,10 @@ border-radius: 3em;
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 580px;
-    height: 800px;
+    width: 500px;
+    height: 1000px;
     background: linear-gradient(0deg,transparent,
-    transparent,#ff2770,#ff2770,#ff2770);
+    transparent,#fff,#fff,#fff);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -136,7 +136,7 @@ transform: rotate(360deg);
 
     .box form .inputBox{
         position: relative;
-        width: 300px;
+        width: 350px;
         margin-top: 35px;
     }
     .box form .inputBox input{
@@ -190,7 +190,7 @@ z-index: 10;
 }
 
 .box form .links a{
-    margin: 10px;
+    margin: 20px;
     font-size: 0.75em;
     color: #8f8f8f;
     text-decoration: none;
@@ -203,9 +203,9 @@ z-index: 10;
     border: none;
     outline: none;
     padding: 9px 25px;
-    background: #fff;
+    /* background: #fff; */
     cursor: pointer;
-    font-size: 0.9em;
+    font-size: 1em;
     border-radius: 4px;
     font-weight: 600;
     width: 100px;
@@ -215,18 +215,73 @@ z-index: 10;
     opacity: 0.8;
 }
 
-@media (max-width:720px){
-    .box{
-        height:900px
-    }
+@media (max-width:900px){
+   
     #broker{
-        height: 950px;
         margin-top: 5rem;
     }
     .carousel-inner{
     width: 100%;
    }
+
 }
+
+@media (max-width:720px){
+    .box{
+        height:1000px
+    }
+    #broker{
+        height: 1000px;
+        margin-top: 5rem;
+    }
+    .carousel-inner{
+    width: 100%;
+   }
+   .box form .inputBox{
+    width: 290px;
+   } 
+   .carousel-item{
+    height: 100px;
+   }
+   .carousel-item h6, h2{
+    background-color: rgba(0, 0, 0,0.5);
+    border-radius: 20px;
+  
+   }
+}
+
+@media (max-width:360px){
+    .box{
+        height:1000px
+    }
+    #broker{
+        height: 1000px;
+        margin-top: 5rem;
+    }
+    .carousel-inner{
+    width: 100%;
+   }
+   .box form .inputBox{
+    width: 250px;
+   }
+
+   .carousel-item{
+    height: 100px;
+   }
+   .carousel-item h6, h2{
+    background-color: rgba(0, 0, 0,0.5);
+    border-radius: 20px;
+  
+   }
+}
+
+
+
+.carousel-item{
+    height: 350px;
+   }
+  
+
 
 #call{
     background-color: white;
@@ -240,12 +295,57 @@ z-index: 10;
         right: 20px;
          text-decoration: none; 
          color: #1c1c1c;
-        font-size: 50px;
-        height: 80px;
-        width: 85px;
+        font-size: 40px;
+        height: 60px;
+        width: 75px;
 }
 
 form{
     display: flex;  align-items: center; justify-content: center;
 }
 
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .popup h2 {
+    margin-top: 0;
+  }
+  
+  .popup label,
+  .popup input,
+  .popup button {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .popup button[type="submit"],
+  .popup button[type="button"] {
+    width: 100px;
+  }
+  
+  .popup input[type="text"],
+  .popup input[type="email"] {
+    width: 100%;
+    padding: 5px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+  }
+  
