--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,18 +17,18 @@
 
     <main>
     <div class="startText">
-    <h1>Struggling In Finding<span style="font-family:'Courier New', Courier, monospace"> House/Land ?</span></h1>
+    <h1>Struggling In Finding<span style="font-family:'Courier New', Courier, monospace"> House / Land </span> </h1>
     </div>
 
     <!-- =================Client Form =========================== -->
     
 <div class="row">
-    <div class="box col-lg-12">
+    <div class="box col-lg-12"  id="popupForm" class="popup">
     <span class="borderLine"></span>
-        <form action="/" method="POST"  style="">
-            <h2>Are You A Client ?</h2>
+        <form action="/client" method="POST"  style="">
+            <h3>Are You A Client ? <span style="font-size: 12px;">~ Give Your Details</span></h3>
         <div class="inputBox">
-            <input name="clientName" type="text" required="required">
+            <input name="clientName" type="text">
             <span>Your Name</span>
             <i></i>
             </div>
@@ -45,14 +45,12 @@
                 <i></i>
                 </div>
                 <div class="inputBox">
-                    <select name="location" type="text" required="required">
+                    <select name="location" type="text">
                         <span>Where Do You Want?</span>
                         <option selected disabled  value="House">Where Do You Want?</option>
-                        <option value="Kurukshetra">Kurukshetra</option>
+                        <option value="Mohali">Mohali</option>
                         <option value="Chandigarh">Chandigarh</option>
-                        <option value="Karnal">Karnal</option>
-                        <option value="Ambala">Ambala</option>
-                        <option value="Yamuna Nagar">Yamuna Nagar</option>
+                        <option value="Panchkula">Panchkula</option>
                     </select>
                     <i></i>
                     </div>
@@ -61,10 +59,77 @@
                         <span>Zip-Code</span>
                         <i></i>
                     </div> -->
-             
+
                     <div class="inputBox">
-                        <input type="text" name="budget" required="required">
-                        <span>Max-Budget</span>
+                        <input type="text" name="particularLocation" >
+                        <span>Specific Location eg. Sector-17</span>
+                        <i></i>
+                    </div>
+                    
+                    <!-- <div class="inputBox">
+                        <input type="text" name="currentLocation" >
+                        <span>Your Current Location eg. HouseNo.123 Sector-17 City </span>
+                        <i></i>
+                    </div> -->
+                    
+                    <div class="inputBox">
+                        <input type="number" name="budget"  >
+                        <span>Max-Budget eg. 1,00,00,000</span>
+                        <i></i>
+                    </div>
+                    <div class="inputBox">
+                        <input name="phone" type="number" required="required" >
+                        <span>Phone Number</span>
+                        <i></i>
+                        </div>
+                        <div class="inputBox">
+                            <input name="email" type="email"  style="width:100%" >
+                            <span>Your Email eg. xyz@gmail.com</span>
+                            <i></i>
+                            </div>  
+                        <div class="inputBox">
+                                <input type="text" name="description" placeholder="Any more extra Information">
+                                <span>Description</span>
+                                <i></i>
+                            </div>
+                     
+        <input type="submit" value="Submit"  >
+        </form>
+    </div>
+
+      
+
+    <!-- ========================Broker Form======================= -->
+
+    <div class="box col-lg-12" id="broker">
+        <span class="borderLine"></span>
+        <form action="/broker" method="POST"  style="">
+            <h3>Are You A Broker ? <span style="font-size: 12px;">~ Be Our Partners</span></h3>
+            
+            <div class="inputBox">
+                <input type="text" required="required" name="businessName">
+                <span>Buisness Name</span>
+                <i></i>
+                </div>
+        <div class="inputBox">
+            <input type="text" required="required" name = "brokerName">
+            <span>Your Name</span>
+            <i></i>
+            </div>
+     
+                <div class="inputBox">
+                    <input type="text" required="required" name="location">
+                    <span>Deals In Which Part Of Tricity?</span>
+                    <i></i>
+                    </div>
+                    <div class="inputBox">
+                        <input type="number" name="previousDeals" >
+                        <span>Number Of Successfull Deals Approx </span>
+                        <i></i>
+                    </div>
+                    <div class="inputBox">
+                        <input type="text" required="required" name="officeLocation">
+                        <span>Office Location</span>
                         <i></i>
                     </div>
                     <div class="inputBox">
@@ -73,58 +138,15 @@
                         <i></i>
                         </div>
                         <div class="inputBox">
-                            <input name="email" type="email" required="required" style="width:100%">
+                            <input name="email" type="email" >
                             <span>Your Email</span>
                             <i></i>
                             </div>  
-       
-        <input type="submit" value="Submit"  >
-        </form>
-    </div>
-
-    <!-- ========================Broker Form======================= -->
-
-    <div class="box col-lg-12" id="broker">
-        <span class="borderLine"></span>
-        <form action="/client" method="post">
-            <h2>Are You A Broker ? <span style="font-size: 12px;">~ Be Our Partners</span></h2>
-            
-            <div class="inputBox">
-                <input type="text" required="required">
-                <span>Buisness Name</span>
-                <i></i>
-                </div>
-        <div class="inputBox">
-            <input type="text" required="required">
-            <span>Your Name</span>
-            <i></i>
-            </div>
-     
-                <div class="inputBox">
-                    <input type="text" required="required">
-                    <span>Deals In Which Part Of India?</span>
-                    <i></i>
-                    </div>
-                    <!-- <div class="inputBox">
-                        <input type="Budget" required="required">
-                        <span>Zip-Code</span>
-                        <i></i>
-                    </div> -->
-                    <div class="inputBox">
-                        <input name ="Address"type="text" required="required">
-                        <span>Address</span>
-                        <i></i>
-                    </div>
-                    <div class="inputBox">
-                        <input name="Number" type="text" required="required">
-                        <span>Phone Number</span>
-                        <i></i>
-                        </div>
-                        <div class="inputBox">
-                            <input name="email" type="email" required="required">
-                            <span>Your Email</span>
-                            <i></i>
-                            </div>  
+                            <div class="inputBox">
+                                <input type="text" name="description" placeholder="Any more extra Information">
+                                <span>Description</span>
+                                <i></i>
+                            </div>
        
         <input type="submit" value="Submit" >
         </form>
@@ -133,5 +155,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
