--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,71 +1,70 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.108.0">
-    <link rel="shortcut icon" type="image/png" href="img/logo.png">
-    <title>DreamHouseLand</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.108.0">
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
+  <link rel="shortcut icon" type="image/png" href="img/logo.png">
+  <title>TRI CITY Homes</title>
 
-    
 
-    
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
 
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-<link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#712cf9">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
+  <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
+  <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
+  <meta name="theme-color" content="#712cf9">
 
-    
-    <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
-  </head>
-  <body>
-    
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">DreamHouse Land</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#broker">Join Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#about">About Us</a>
-          </li>
-        </ul>
- 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <!-- Custom styles for this template -->
+  <link href="css/carousel.css" rel="stylesheet">
+</head>
+<body>
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">TRI CITY Homes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" id="navbarToggler">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#broker">Join Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="/aboutus">About Us</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  
-    <a href="tel:+919813018436" id = "call"><i class="ri-phone-fill"></i></a>
-  
-</header>
+    </nav>
+
+
+    <a href="tel:+919813018436" id="call"><i class="ri-phone-fill"></i></a>
+
+  </header>
 
 
 <!-- 
 <main>       Containerrrrr--> 
 
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+  <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -77,8 +76,8 @@
           
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Find Your Premium</h1>
-                <p>Real Estate In Your Area</p>
+                <h2>Find Your Premium</h2>
+                <h6>Real Estate In Your Area</h6>
                 <p><a class="btn btn-lg btn-danger" href="#">Find Now <i class="ri-search-line"></i></a></p>
               </div>
             </div>
@@ -88,8 +87,8 @@
             <img class="bd-placeholder-img" width="40%" height="100%"  aria-hidden="true" src="img/homeSlide1.jpg" alt="">
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>We Join Our Hands For You.</h1>
-                <h5>We have large links with all Real Estate Agents Of Your City.</h5>
+                <h2>We Join Our Hands For You.</h2>
+                <h6>We have large links with all Real Estate Agents Of Your City.</h6>
                 <p><a class="btn btn-lg btn-danger" href="#">Join US</a></p>
               </div>
             </div>
@@ -100,8 +99,8 @@
       
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>Why Hard Work Only Smart.</h1>
-            <h5>Find Your Affordable Dream House In Lesser Time</h5>
+            <h2>Why Hard Work Only Smart.</h2>
+            <h6>Find Your Affordable Dream House In Lesser Time</h6>
             <p><a class="btn btn-lg btn-danger" href="#">Start Now</a></p>
           </div>
         </div>
@@ -117,6 +116,139 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div> -->
+  <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/homeSlide2.jpg" class="d-block w-50" alt="Slide 1">
+        <div class="carousel-caption">
+          <h2>Find Your Premium</h2>
+          <h6>Real Estate In Your Area</h6>
+          <p><a class="btn btn-lg btn-danger" href="#">Find Now <i class="ri-search-line"></i></a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide1.jpg" class="d-block w-50" alt="Slide 2">
+        <div class="carousel-caption">
+          <h2>We Join Our Hands For You.</h2>
+          <h6>We have strong connections with all Real Estate Agents in your city.</h6>
+          <p><a class="btn btn-lg btn-danger" href="#">Join Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide3.jpg" class="d-block w-50" alt="Slide 3">
+        <div class="carousel-caption">
+          <h2>Work Smart, Not Hard.</h2>
+          <h6>Find Your Affordable Dream House in Less Time</h6>
+          <p><a class="btn btn-lg btn-danger" href="#">Start Now</a></p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
+  </div> -->
+  
+  
+  <!-- <div id="myCarousel" class="carousel">
+    <ol class="carousel-indicators">
+      <li class="active"></li>
+      <li></li>
+      <li></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/homeSlide2.jpeg" alt="Slide 1">
+        <div class="carousel-caption">
+          <h2>Find Your Premium</h2>
+          <h6>Real Estate In Your Area</h6>
+          <p><a class="btn btn-danger" href="#">Find Now <i class="ri-search-line"></i></a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide1.jfif" alt="Slide 2">
+        <div class="carousel-caption">
+          <h2>We Join Our Hands For You.</h2>
+          <h6>We have strong connections with all Real Estate Agents in your city.</h6>
+          <p><a class="btn btn-danger" href="#">Join Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide3.jpg" alt="Slide 3">
+        <div class="carousel-caption">
+          <h2>Work Smart, Not Hard.</h2>
+          <h6>Find Your Affordable Dream House in Less Time</h6>
+          <p><a class="btn btn-danger" href="#">Start Now</a></p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> -->
+
+
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/homeSlide2.jpg" alt="Slide 1">
+        <!-- <div class="carousel-caption">
+          <h2>Find Your Premium</h2>
+          <h6>Mohali Chandigarh Panchkula</h6>
+          <p><a class="btn btn-danger" href="#">Find Now <i class="ri-search-line"></i></a></p>
+        </div> -->
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide1.jpg" alt="Slide 2">
+        <!-- <div class="carousel-caption">
+          <h2>We Join Our Hands For You.</h2>
+          <h6>We have strong connections with all Real Estate Agents in your city.</h6>
+          <p><a class="btn btn-danger" href="#">Join Us</a></p>
+        </div> -->
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide3.jpg" alt="Slide 3">
+        <!-- <div class="carousel-caption">
+          <h2>Work Smart, Not Hard.</h2>
+          <p><a class="btn btn-danger" href="#">Start Now</a></p>
+        </div> -->
+      </div>
+      <div class="carousel-item">
+        <img src="img/homeSlide4.jpg" alt="Slide 3">
+        <!-- <div class="carousel-caption">
+          <h2>Work Smart, Not Hard.</h2>
+          <p><a class="btn btn-danger" href="#">Start Now</a></p>
+        </div> -->
+      </div>
+    </div>
+    <!-- <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
   </div>
 
 
@@ -133,27 +265,27 @@
     <!-- <div class="container marketing"></div>                Containerr remove  -->
 
     <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-        <h1 class="mb-3">Property Agents</h1>
-        <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+        <h1 class="mb-3">Some of our Property Agents</h1>
+        <p>Welcome to our esteemed real estate platform, connecting premier property agents in the dynamic regions of Mohali, Chandigarh, and Panchkula. With our comprehensive network of trusted professionals, we strive to provide unparalleled real estate services and exceptional client experiences.</p>
     </div>
     <div class="row">
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="img/agent1.jpg" width="200" height="200"/>
-        <h2 class="fw-normal">Suraj Keshwar</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">Kuruksherta</a></p>
+        <h2 class="fw-normal">Suraj Rathore</h2>
+        <p>Residential</p>
+        <p><a class="btn btn-secondary" href="#">Chandigarh</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="img/agent2.jpg" width="200" height="200"/>
         <h2 class="fw-normal">Manish Pal</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">Karnal</a></p>
+        <p>Residential & Commercial</p>
+        <p><a class="btn btn-secondary" href="#">Mohali</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="img/agent3.jpg" width="200" height="200"/>
         <h2 class="fw-normal">Aman Rana</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">ZIrakpur</a></p>
+        <p>Residential</p>
+        <p><a class="btn btn-secondary" href="#">Panchkula</a></p>
       </div>
     </div>
 
@@ -178,7 +310,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Thousands Of Happy Families. <span class="text-muted">See for your Family.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <p class="lead">Mohali, Chandigarh, and Panchkula are thriving communities that offer a harmonious blend of modern amenities, excellent infrastructure, and a high quality of life. Our goal is to help you discover the ideal property in these sought-after locations, where you and your family can thrive and flourish</p>
       </div>
       <div class="col-md-5 order-md-1">
         <video src="vid/video1.mp4" autoplay loop muted></video>
@@ -190,7 +322,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <p class="lead">Additionally, our dedicated experts are well-versed in handling the intricate paperwork involved in real estate transactions. We understand that the paperwork can often be complex and overwhelming, with numerous legal documents and formalities to be fulfilled. Our team takes care of all the paperwork, meticulously reviewing and preparing the necessary documents, ensuring compliance with legal requirements, and facilitating a seamless process.</p>
       </div>
       <div class="col-md-5">
         <video src="vid/video3.mp4" autoplay loop muted></video>
@@ -207,11 +339,24 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2022–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2015–2023 Company, Inc. &middot; <a href="/">Privacy</a> &middot; <a href="/">Terms</a></p>
   </footer>
 </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
+
+    <script>
+      const navbarToggler = document.getElementById("navbarToggler");
+  const navbarCollapse = document.getElementById("navbarCollapse");
+  
+  navbarToggler.addEventListener("click", function() {
+    if (navbarCollapse.classList.contains("show")) {
+      navbarCollapse.classList.remove("show");
+    } else {
+      navbarCollapse.classList.remove("show");
+    }
+  });
+    </script>
+    
   </body>
 </html>
 
