--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -32,7 +32,7 @@
         chandigarh mohali house
         house at mohali
         home sale in mohali
-        housing in mohali For more details +91 9357552626
+        housing in mohali 
         
         </p>
         <p>
