--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,6 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.108.0">
+<meta name="google-site-verification" content="x58VEtD49qGR79KSFXi9YpO2nHauDWGbm4Qkfy1Z7xc" />
 
   <link rel="shortcut icon" type="image/png" href="img/logo.png">
   <title>TRI CITY Homes</title>
