--- a/views/main.ejs
+++ b/views/main.ejs
@@ -311,7 +311,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Thousands Of Happy Families. <span class="text-muted">See for your Family.</span></h2>
-        <p class="lead">Mohali, Chandigarh, and Panchkula are thriving communities that offer a harmonious blend of modern amenities, excellent infrastructure, and a high quality of life. Our goal is to help you discover the ideal property in these sought-after locations, where you and your family can thrive and flourish</p>
+        <p class="lead">Mohali, Chandigarh, and Panchkula are thriving communities that offer a harmonious blend of modern amenities, excellent infrastructure, and a high quality of life. Our goal is to help you discover the ideal property in these sought-after locations, where you and your family can thrive and flourish. Jeet Dark Knight</p>
       </div>
       <div class="col-md-5 order-md-1">
         <video src="vid/video1.mp4" autoplay loop muted></video>
@@ -323,7 +323,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Additionally, our dedicated experts are well-versed in handling the intricate paperwork involved in real estate transactions. We understand that the paperwork can often be complex and overwhelming, with numerous legal documents and formalities to be fulfilled. Our team takes care of all the paperwork, meticulously reviewing and preparing the necessary documents, ensuring compliance with legal requirements, and facilitating a seamless process.</p>
+        <p class="lead">Additionally, our dedicated experts are well-versed in handling the intricate paperwork involved in real estate transactions. We understand that the paperwork can often be complex and overwhelming, with numerous legal documents and formalities to be fulfilled. Our team takes care of all the paperwork, meticulously reviewing and preparing the necessary documents, ensuring compliance with legal requirements, and facilitating a seamless process.jeet dark knight</p>
       </div>
       <div class="col-md-5">
         <video src="vid/video3.mp4" autoplay loop muted></video>
