--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="You Tube, youtube, jeet dark knight , motivation, jeet dark knight">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.108.0">
-<meta name="google-site-verification" content="x58VEtD49qGR79KSFXi9YpO2nHauDWGbm4Qkfy1Z7xc" />
+  <meta name="google-site-verification" content="x58VEtD49qGR79KSFXi9YpO2nHauDWGbm4Qkfy1Z7xc" />
 
   <link rel="shortcut icon" type="image/png" href="img/logo.png">
-  <title>TRI CITY Homes</title>
+  <title>Jeet Dark Knight</title>
 
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
@@ -311,7 +311,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Thousands Of Happy Families. <span class="text-muted">See for your Family.</span></h2>
-        <p class="lead">Mohali, Chandigarh, and Panchkula are thriving communities that offer a harmonious blend of modern amenities, excellent infrastructure, and a high quality of life. Our goal is to help you discover the ideal property in these sought-after locations, where you and your family can thrive and flourish. Jeet Dark Knight</p>
+        <p class="lead">Mohali, Chandigarh, and Panchkula are thriving communities that offer a harmonious blend of modern amenities, excellent infrastructure, and a high quality of life. Our goal is to help you discover the ideal property in these sought-after locations, where you and your family can thrive and flourish.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <video src="vid/video1.mp4" autoplay loop muted></video>
@@ -323,7 +323,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Additionally, our dedicated experts are well-versed in handling the intricate paperwork involved in real estate transactions. We understand that the paperwork can often be complex and overwhelming, with numerous legal documents and formalities to be fulfilled. Our team takes care of all the paperwork, meticulously reviewing and preparing the necessary documents, ensuring compliance with legal requirements, and facilitating a seamless process.jeet dark knight</p>
+        <p class="lead">Additionally, our dedicated experts are well-versed in handling the intricate paperwork involved in real estate transactions. We understand that the paperwork can often be complex and overwhelming, with numerous legal documents and formalities to be fulfilled. Our team takes care of all the paperwork, meticulously reviewing and preparing the necessary documents, ensuring compliance with legal requirements, and facilitating a seamless process.</p>
       </div>
       <div class="col-md-5">
         <video src="vid/video3.mp4" autoplay loop muted></video>
