--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="You Tube, youtube, jeet dark knight , motivation, jeet dark knight">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <title>Property in chandigarh</title>
+  <meta name="description" content="Prime Chandigarh Mohali Properties: Luxury Living at Affordable Prices - Explore Now! Premium properties available at competitive prices in the prime location of Mohali Chandigarh Panchkula">
+  <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali">
+  <meta name="author" content="Ajitesh Singh">
   <meta name="generator" content="Hugo 0.108.0">
   <meta name="google-site-verification" content="x58VEtD49qGR79KSFXi9YpO2nHauDWGbm4Qkfy1Z7xc" />
 
   <link rel="shortcut icon" type="image/png" href="img/logo.png">
-  <title>Jeet Dark Knight</title>
+ 
 
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
