--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Property in chandigarh | mohali</title>
   <meta name="description" content="Prime Chandigarh Mohali Properties: Luxury Living at Affordable Prices - Explore Now! Premium properties available at competitive prices in the prime location of Mohali Chandigarh Panchkula">
-  <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali, Jeet Estates">
+  <meta name="keywords" content="property in chandigarh, know your property in chandigarh, sale property in chandigarh, sale of property in chandigarh, property in mohali, property in mohali for sale, real estate in chandigarh, properties in chandigarh, properties in chandigarh for sale, properties in mohali, real estate agents in chandigarh, real estate agents in mohali, Jeet Estates, https://propertyinchandigarh.onrender.com">
   <meta name="author" content="Jeet Estates">
   <meta name="generator" content="Hugo 0.108.0">
   <meta name="google-site-verification" content="x58VEtD49qGR79KSFXi9YpO2nHauDWGbm4Qkfy1Z7xc" />
@@ -37,7 +37,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TRI CITY Homes</a>
+        <a class="navbar-brand" href="#">https://propertyinchandigarh.onrender.com</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" id="navbarToggler">
           <span class="navbar-toggler-icon"></span>
