--- a/views/main.ejs
+++ b/views/main.ejs
@@ -37,7 +37,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">https://propertyinchandigarh.onrender.com</a>
+        <a class="navbar-brand" href="#">TRI CITY Homes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" id="navbarToggler">
           <span class="navbar-toggler-icon"></span>
